# rust_graphics_sandbox

./: .gitignore  Cargo.toml  LICENSE  build.rs
shaders/: model.slang  triangle.slang
src/: app.rs  camera.rs  egui_renderer.rs  main.rs  material.rs  mesh.rs  model.rs  shader.rs  world.rs
