[package]
name = "rust_graphics_sandbox"
edition = "2021"
rust-version = "1.88"
publish = false

[lints.rust]
dead_code = "allow"

[dependencies]
env_logger = "0.11"
pollster = "0.4"
wgpu = { version = "27.0.0", features = ["spirv"] }
winit = { version = "0.30.8" }
bytemuck = "1.22.0"
gltf = "1.4.1"
glam = "0.30.9"
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
egui-winit = "0.33.0"
